[mijimenezmolina] Revisión de código y mensajes de log para los servicios implementados